# belay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  VISION.md  pyproject.toml
.claude/skills/belay-begin/: SKILL.md
.claude/skills/belay-begin-fast/: SKILL.md
.claude/skills/belay-begin-fast/references/: gather-context.md
.claude/skills/belay-begin/references/: proposals.md
.claude/skills/belay-end/: SKILL.md
.claude/skills/belay-end-fast/: SKILL.md
.claude/skills/belay-next/: SKILL.md
.claude/skills/belay-report/: SKILL.md
.claude/skills/belay-worktrees/: SKILL.md
.claude/skills/prd-generator/: SKILL.md
.claude/skills/prd-interview/: SKILL.md
.claude/skills/tech-plan/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
docs/planning/_card/: issue.md
docs/planning/deterministic-replay/: prd.md  understanding.md
docs/planning/deterministic-replay/replay-engine/: plan_20260716.md  spec.md
docs/planning/failure-corpus/: prd.md  understanding.md
docs/planning/failure-corpus/corpus-engine/: plan_20260718.md
docs/planning/invariant-verdict-a1/: prd.md  understanding.md
docs/planning/invariant-verdict-a1/invariant-engine/: plan_20260718.md  spec.md
docs/planning/mcp-proxy-capture/: prd.md  understanding.md
docs/planning/mcp-proxy-capture/stdio-proxy-capture/: plan_20260715.md  spec.md
docs/planning/phase0-corpus-run/: RUNBOOK.md  prd.md  understanding.md
docs/planning/phase0-corpus-run/minting-driver/: spec.md
docs/planning/phase0-corpus-run/phase0-runner/: plan_20260719.md  spec.md
docs/planning/phase0-live-mint/: prd.md  understanding.md
docs/planning/phase0-live-mint/audit-and-publish/: spec.md
docs/planning/phase0-live-mint/batch-harness/: plan_20260722.md  spec.md
docs/planning/phase0-live-mint/instance-registry/: plan_20260721.md  spec.md
docs/planning/phase0-live-mint/mint-execution/: STAGE1_FINDINGS.md  spec.md
docs/planning/phase0-minting-driver/: plan_20260721.md  prd.md  understanding.md
docs/planning/replay-absolute-path-fidelity/: prd.md  understanding.md
docs/planning/replay-absolute-path-fidelity/record-workspace-root/: plan_20260722.md  spec.md
docs/planning/replay-absolute-path-fidelity/replay-relocation/: plan_20260722.md  spec.md
docs/planning/replay-verify-a2/: prd.md  understanding.md
docs/planning/replay-verify-a2/verdict-engine/: plan_20260717.md  spec.md
docs/planning/sandbox-snapshot-restore/: prd.md  spike-loopback.md  understanding.md
docs/planning/sandbox-snapshot-restore/seatbelt-sandbox/: plan_20260715.md  spec.md
docs/technical/: CAPABILITY_ROADMAP.md  PHASE0_RESULTS.md  THREAT_MODEL.md  TRACE_FORMAT.md
eval/: README.md  __init__.py  instances.md
eval/instances/: __init__.py  registry.py  selection.py  tasks.py
eval/minting_driver/: __init__.py  batch.py  bridge.py  capture.py  checkpoint.py  fakes.py  loop.py  mcp.py  model.py  servers.py  session.py  transport.py  workspace.py
eval/minting_driver/clients/: __init__.py  anthropic_client.py  local_client.py
src/belay/: annotations.py  cli.py  connection.py  declared.py  errors.py  frames.py  hashing.py  index.py  proxy.py  trace.py
src/belay/corpus/: __init__.py  add.py  case.py  curate.py  metrics.py  run.py
src/belay/phase0/: __init__.py  ledger.py  report.py  runner.py
src/belay/replay/: __init__.py  client.py  determinism.py  engine.py  persist.py  reader.py  relocate.py  report.py
src/belay/sandbox/: __init__.py  gate.py  launch.py  scope.py  seatbelt.py
src/belay/snapshot/: __init__.py  bth1.py  clone.py  substrate.py
src/belay/verify/: __init__.py  effect.py  invariants.py  result.py  turn.py  verdict.py
tests/: conftest.py  test_abs_path_fixture.py  test_annotations.py  test_bounded_peek.py  test_bth1.py  test_capture_shutdown.py  test_connection_context.py  test_containment.py  test_corpus_add.py  test_corpus_case.py  test_corpus_label.py  test_corpus_metrics.py  test_corpus_roundtrip.py  test_corpus_run.py  test_correlation.py  test_corrupt_success_case.py  test_default_scope.py  test_determinism.py  test_differential.py  test_errors.py  test_eval_instance_registry.py  test_eval_instance_selection.py  test_eval_instance_tasks.py  test_fixture_guard.py  test_import_guard.py  test_inferred_invariants.py  test_invariant_eval.py  test_invariants.py  test_launch.py  test_launch_demo.py  test_minting_driver_batch.py  test_minting_driver_bridge.py  test_minting_driver_capture.py  test_minting_driver_checkpoint.py  test_minting_driver_clients_import.py  test_minting_driver_clients_mapping.py  test_minting_driver_loop.py  test_minting_driver_mcp.py  test_minting_driver_model.py  test_minting_driver_servers.py  (+43 more)
tests/fixtures/: abs_path_editor_server.py  annotation_frames.py  cheat_test_runner_server.py  conforming_server.py  connection_frames.py  dies_midway_server.py  duplex_server.py  error_frames.py  fake_server.py  filesystem_server.py  minting_driver_echo_server.py  minting_driver_hang_server.py  minting_driver_noisy_stderr_server.py  minting_driver_silent_exit_server.py  mutating_server.py  nondeterministic_server.py  nonutf8_server.py  pipelining_server.py  probe_server.py  readonly_liar_server.py  sdk_proxy.py  torture_tree.py  weakening_editor_server.py
