[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# The PyPI distribution name is `belay-harness` because `belay` is already taken on
# PyPI (an unrelated MicroPython tool). The import package and the CLI stay `belay`:
#   pip install belay-harness   ->   belay --help   /   import belay
name = "belay-harness"
version = "0.2.0"
description = "The agent harness: sandbox any agent, verify each step by replaying it against real state, and keep a deterministic trace."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Ali Haqiqi" }]
keywords = [
    "agent",
    "harness",
    "mcp",
    "sandbox",
    "replay",
    "verification",
    "observability",
    "llm",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
# Zero runtime dependencies — stdlib only. This is a deliberate, load-bearing property.
dependencies = []

[project.urls]
Homepage = "https://github.com/haqaliz/belay"
Repository = "https://github.com/haqaliz/belay"
Issues = "https://github.com/haqaliz/belay/issues"
Changelog = "https://github.com/haqaliz/belay/blob/master/CHANGELOG.md"

[project.scripts]
belay = "belay.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "mcp==1.28.1",
]
eval = [
    "anthropic>=0.117.0",
    "openai>=2.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/belay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so tests/ can `import eval.minting_driver` — `eval/` is a new,
# eval-only top-level tree (not part of the `belay-harness` wheel: see `[tool.hatch.build
# .targets.wheel] packages`), so it is not reachable via the editable install of `belay`.
pythonpath = ["."]
markers = [
    "sdk: uses the real mcp SDK client (dev-only dep)",
    "manual: real model + real npx MCP servers + live spend; never runs in CI, select in with -m manual",
]
# `manual`-marked tests (the Task 5 minting-driver smoke) are excluded from the default
# run: they spawn real npx MCP servers, spend against a real model API, and require
# Darwin + Seatbelt. `-m manual` on the command line overrides this addopts value, so
# `uv run pytest tests/test_minting_driver_smoke.py -m manual` still selects it.
addopts = "-m 'not manual'"
